# vorsken

./: .coverage  .gitignore  .stacksecai.yml  CHANGELOG.md  LICENSE  README.md  Run-All.ps1  RunAll_patch_and_guide.ps1  SECURITY.md  Setup-GitHubLabels.ps1  Step1_Collect-CVEs.ps1  Step1b_Enrich-Attention.ps1  Step1c_Enrich-Avid.ps1  Step2_Analyze-WithClaude.ps1  Step3_Export-Report.ps1  Step4_Create-GitHubIssues.ps1  Test-Encoding.ps1  WeeklyCveReport.xml  action.yml  claude_analyzer_fixed.py  pyproject.toml  requirements.txt  result.json  ssai_progress.yaml  stacksecai_project_base.md  write_rules.ps1
.github/workflows/: ci.yml  policy-gate.yml  weekly-cve.yml
output/: cve_report_20260330.json  cve_report_20260330.md  cve_report_20260331.json  cve_report_20260331.md
rules/custom/: api10_unsafe_api.yml  api1_bola.yml  api2_broken_auth.yml  api3_mass_assignment.yml  api4_resource_limit.yml  api5_func_authz.yml  api6_business_flow.yml  api8_debug_mode.yml  api8_hardcoded_secret.yml  api9_inventory.yml  eval_injection.yml  hardcoded_password.yml  ssrf.yml  subprocess_injection.yml
scripts/: update_base_from_progress.py
src/stacksecai/: claude_analyzer.py  claude_analyzer.py.bak  config.py  gate.py  log_filter.py  main.py  policy_gate.py  pr_commenter.py  semgrep_runner.py
src/stacksecai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stacksec/: policy_gate.py
tests/: test_claude_analyzer.py  test_config.py  test_e2e.py  test_gate_cli.py  test_log_filter.py  test_main.py  test_policy_gate.py  test_pr_commenter.py  test_semgrep_runner.py
tests/fixtures/: empty_result.json  vuln_sample.py  vulnerable_sample.py
work/: cve_analyzed.json  cve_avid.json  cve_enriched.json  cve_raw.json
work/_enctest/: sample_report.md
