[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stacksecai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error::EncodingWarning",
]