[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stacksecai"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "httpx>=0.27.0",
    "pyyaml",
    "requests",
    "semgrep",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "types-requests", "types-PyYAML",]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error::EncodingWarning",
]
addopts = "--cov=stacksecai --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/stacksecai"]
omit   = ["*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-height = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]